--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -1,4 +1,4 @@
-Alpha 0.1.0 (17.07.2024 - ?)
+Alpha 0.1.0 (17.07.2024 - 09.08.2024)
 - Created the project
 - Written some preliminary language specs (in the form of poorly structured notes).
 - Written the first version of lexer and parser.
