Added bitwise operators

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -25,6 +25,7 @@ Alpha 0.1.2 (16.08.2024 - ?)
 - Added variables of function type.
 - Added type cast operator (as).
 - Added compilation time output.
+- Added bitwise operators (>>, <<, ~, ^, |, &).
 - Fixed bug when compiler failed to choose a function when it has no arguments.
 - Fixed bug where a division by zero during compile-time evaluation somehow went unnoticed.
 - Fixed memory leaks due to destructors not being called.
